Revision history for Verilator

The contributors that suggested a given feature are shown in []. Thanks!

* Verilator 3.923 devel

****  Fix parsing "output signed" in V2K port list, msg2540. [James Jung]


* Verilator 3.922 2018-03-17

**    Support IEEE 1800-2017 as default language.

***   Support trig functions ($sin() etc), bug1281. [Patrick Stewart]

***   Support calling system functions as tasks, bug1285. [Joel Holdsworth]

***   Support assert properties, bug785, bug1290. [John Coiner, et al]

***   Support $writememh. [John Coiner]

***   Add --no-debug-leak to reduce memory use under debug. [John Coiner]

****  Fix severe runtime performance bug in certain foreach loops. [John Coiner]

****  On convergence errors, show activity. [John Coiner]

****  Fix GCC 8.0 issues, bug1273.

****  Fix pullup/pulldowns on bit selects, bug1274. [Rob Stoddard]

****  Fix verilator_coverage --annotate-min, bug1284. [Tymoteusz Blazejczyk]

****  Fix quoting of quoted arguments. [John Coiner]


* Verilator 3.920 2018-02-01

**    Moving forward, use the git "stable" branch to track the latest release,
      and git "v#.###" tags for specific releases.

***   Support 'assume' similar to 'assert', bug1269. [Dan Gisselquist]

****  Fix tracing example file output, bug1268. [Enzo Chi]

****  Fix gate optimization out of memory, add --gate-stmts, bug1260. [Alex Solomatnikov]

****  Fix compile error on public real parameters by suppressing, bug1261. [Alex Solomatnikov]

****  Fix input-only tristate comparisons, bug1267. [Alexis G]

****  Fix missing edge type in xml output, msg2480. [Alexis G]

****  Fix compile error with --public and interface bind, bug1264. [Alexis G]

****  Remove c++filt, bug1265. [Stefan Wallentowitz]


* Verilator 3.918 2018-01-02

***   Workaround GCC/clang bug with huge compile times, bug1248.

***   Support DPI open arrays, bug909, bug1245. [David Pierce, Victor Besyakov]

***   Add INFINITELOOP warning, bug1254. [Alex Solomatnikov]
